add user and category
